syntax = "proto3";
package types;

import "google/protobuf/any.proto";

// Transaction represents a blockchain transaction
message Transaction {
  string message_type = 1;
  google.protobuf.Any msg = 2;
  Signature signature = 3;
  uint64 created_height = 4;
  uint64 time = 5;
  uint64 fee = 6;
  string memo = 7;
  uint64 network_id = 8;
  uint64 chain_id = 9;
}

// Signature contains public key and signature bytes
message Signature {
  bytes public_key = 1;
  bytes signature = 2;
}

// MessageSend is a token transfer message
message MessageSend {
  bytes from_address = 1;
  bytes to_address = 2;
  uint64 amount = 3;
}
